src/objects/CD_Notification_Object__c.object
<CustomObject>
    <fields>
        <fullName>CD_Item_Cost_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD Item Cost Details</label>
        <referenceTo>CD_Item_Cost_Details__c</referenceTo>
        <relationshipLabel>CD_Notifications_Object</relationshipLabel>
        <relationshipName>CD_Notifications_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CD_Items__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD Items</label>
        <referenceTo>CD_Items__c</referenceTo>
        <relationshipLabel>CD_Notifications_Object</relationshipLabel>
        <relationshipName>CD_Notifications_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Escalation_Receiver__c</fullName>
        <label>Escalation_Receiver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Escalation_Date__c</fullName>
        <formula>CreatedDate + 17</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Escalation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Escalation_Status__c</fullName>
        <label>First Escalation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sent</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Remainder_Date__c</fullName>
        <formula>CreatedDate + 7</formula>
        <label>First Remainder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Remainder_Status__c</fullName>
        <label>First Remainder Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sent</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remainder_Receiver__c</fullName>
        <label>Remainder_Receiver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Escalation_Date__c</fullName>
        <formula>CreatedDate + 20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Escalation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Escalation_Status__c</fullName>
        <label>Second Escalation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sent</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_Remainder_Date__c</fullName>
        <formula>CreatedDate + 14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Remainder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Remainder_Status__c</fullName>
        <label>Second Remainder Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sent</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CD_Notification_Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CD_Notification_Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CD_Notifications_Object</pluralLabel>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>